--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <!-- Screen 3 -->
     <string name="numberThree">3</string>
     <string name="entered_number">Hey! You entered number %d</string>
+    <string name="enter_details_rationale">Please enter your details at the next step…</string>
 
     <!-- Screen 4 -->
     <string name="numberFour">4</string>
@@ -31,6 +32,8 @@
     <!-- Screen 5 -->
     <string name="numberFive">5</string>
     <string name="flow_completion">You\'ve completed the flow successfully!</string>
+    <string name="number_entered_display">You entered number %d</string>
+    <string name="your_details">Your details are as follows:</string>
     <string name="finish">Finish!</string>
 
 </resources>
